--- a/templates/deals/comments.html
+++ b/templates/deals/comments.html
@@ -1,20 +1,20 @@
 {% include 'deals/comment_create.html' with form=form %}
 
-<div class="container mt-5 mb-4">
-	<div class="row">
-		<div class="col-md-12">
-			<div class="headings d-flex justify-content-between align-items-center mb-3">
-				<h5>Comments ({{ deal.comment_set.count }}):</h5>
+<div class="container mt-5 mb-4" id="comments_container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="headings d-flex justify-content-between align-items-center mb-3">
+                <h5>Komentarze ({{ deal.comment_set.count }}):</h5>
 
-			</div>
-			{#			{% for comment in deal.comment_set.all %}#}
-			{% for comment in comments %}
-				<div class="card p-3 mt-2">
-					<div class="d-flex justify-content-between align-items-center">
-						<div class="user d-flex flex-row align-items-center">
-							<a href="{% url 'accounts:profile' comment.author.username %}">
-								{% if comment.author.avatar %}
-									<img src="{{ comment.author.avatar.url }}"
+            </div>
+            {#			{% for comment in deal.comment_set.all %}#}
+            {% for comment in comments %}
+                <div class="card p-3 mt-2">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="user d-flex flex-row align-items-center">
+                            <a href="{% url 'accounts:profile' comment.author.username %}">
+                                {% if comment.author.avatar %}
+                                    <img src="{{ comment.author.avatar.url }}"
 									     class="user-img rounded-circle z-depth-2 circle-avatar mr-2" alt="User avatar"
 									     style="width:38px; height:38px">
 								{% else %}
@@ -36,36 +36,35 @@
 						</div>
 
 					</div>
-					<div class="action d-flex justify-content-between mt-2 align-items-center">
-						<small class="font-weight-bold">{{ comment.comment }} </small>
-					</div>
-				</div>
-			{% empty %}
-				<div class="card p-3 mt-2">
-					Sorry, no comments yet...
-				</div>
+                    <div class="action d-flex justify-content-between mt-2 align-items-center">
+                        <small class="font-weight-bold">{{ comment.comment }} </small>
+                    </div>
+                </div>
+            {% empty %}
+                <div class="card p-3 mt-2">
+                    Sorry, no comments yet...
+                </div>
 
-			{% endfor %}
+            {% endfor %}
+            {% if comments.paginator.num_pages > 1 %}
+                <div class="pagination">
+		            <span class="step-links">
+				        {% if comments.has_previous %}
+                            <a href="?page=1">&laquo; first</a>
+                            <a href="?page={{ comments.previous_page_number }}">previous</a>
+                        {% endif %}
 
-			<div class="pagination">
-    <span class="step-links">
-        {% if comments.has_previous %}
-	        <a href="?page=1">&laquo; first</a>
-	        <a href="?page={{ comments.previous_page_number }}">previous</a>
-        {% endif %}
+                        <span class="current">
+				            Page {{ comments.number }} of {{ comments.paginator.num_pages }}.
+				        </span>
 
-	    <span class="current">
-            Page {{ comments.number }} of {{ comments.paginator.num_pages }}.
-        </span>
-
-	    {% if comments.has_next %}
-		    <a href="?page={{ comments.next_page_number }}">next</a>
-		    <a href="?page={{ comments.paginator.num_pages }}">last &raquo;</a>
-	    {% endif %}
-    </span>
-			</div>
-
-
-		</div>
-	</div>
+                        {% if comments.has_next %}
+                            <a href="?page={{ comments.next_page_number }}">next</a>
+                            <a href="?page={{ comments.paginator.num_pages }}">last &raquo;</a>
+                        {% endif %}
+		            </span>
+                </div>
+            {% endif %}
+        </div>
+    </div>
 </div>
