--- a/templates/deals/deal_detail.html
+++ b/templates/deals/deal_detail.html
@@ -6,7 +6,7 @@
     <script src="{% static 'js/copyToClipboard.js' %}"></script>
 {% endblock scripts %}
 {% block content %}
-    <div class="container my-5">
+    <div class="container my-5 bg-white p-4 rounded">
         {% if not deal.active %}
             <div class="alert alert-dark" role="alert">
                 <h4 class="alert-heading">Niestety już za późno!</h4>
@@ -34,8 +34,12 @@
                     <div id="mdb-lightbox-ui"></div>
                     <div class="mdb-lightbox">
                         <div class="row product-gallery mx-1">
-                            <div class="col-12 mb-0 shadow-sm">
-                                <figure class="view overlay rounded z-depth-1 main-img">
+                            <div
+                                    class="col-12 mb-0 shadow-sm ripple"
+                                    data-mdb-ripple-centered="true"
+                                    data-mdb-ripple-color="light"
+                            >
+                                <figure class="view overlay img-fluid rounded z-depth-1 main-img">
                                     <img src="{{ deal.product_img.url }}" class="img-fluid z-depth-1 "
                                          alt="Product photo" data-mdb-toggle="modal" data-mdb-target="#dealModal">
                                 </figure>
@@ -168,19 +172,19 @@
                             data: {
                                 deal_id: deal_id,
                                 csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),
-                            action: 'votes',
-                            button: button,
-                        },
-                        success: function (json) {
-                            if (json.length < 1 || json == undefined) {
-                            }
-                            $('.toast').toast('show');
-                            document.getElementById("vote_down").classList.add("disabled")
-                            document.getElementById("vote_up").classList.add("disabled")
-                            document.getElementById("voting-counter").innerHTML = json['total']
-                            document.getElementById("deal_id").dataset.toggle = 'tooltip'
-                            document.getElementById("deal_id").title = 'Możesz oddać tylko jeden głos!'
-                        },
+                                action: 'votes',
+                                button: button,
+                            },
+                            success: function (json) {
+                                if (json.length < 1 || json == undefined) {
+                                }
+                                $('.toast').toast('show');
+                                document.getElementById("vote_down").classList.add("disabled")
+                                document.getElementById("vote_up").classList.add("disabled")
+                                document.getElementById("voting-counter").innerHTML = json['total']
+                                document.getElementById("deal_id").dataset.toggle = 'tooltip'
+                                document.getElementById("deal_id").title = 'Możesz oddać tylko jeden głos!'
+                            },
                             error: function (xhr, errmsg, err) {
                             }
                         });
